# BasicHttpServer

./: .gitignore  CMakeLists.txt  README.md
resources/: index.html
src/: HttpRequest.cpp  HttpRequest.h  HttpResponse.h  Server.cpp  Server.h  main.cpp
